--- a/contact.html
+++ b/contact.html
@@ -7,29 +7,29 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         
 		<link href="./_app/immutable/assets/0.QewCql2K.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/app.Du0GMSGn.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D9PkAPjn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DTBF91yP.js">
+		<link href="./_app/immutable/assets/app.DT9XrtQW.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DPUqRY91.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BWbu0of1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.NBAfo0iF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BmiKDn9V.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.6I4Hk6HB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/store.Cx1hATE_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.C05luBB5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.DxcAWsds.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/this.DPOLloYK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/props.BDvw9qd2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.BtIDxGEO.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DVgpbEKX.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CxDzKi8U.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/slot.ZQRvvWia.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/lifecycle.DKOCfVKU.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.BBeCV5iK.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.D_WSpduC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/input.DYC9Pmsd.js">
     </head>
     <body data-sveltekit-preload-data="hover">
-        <div style="display: contents"><!--[--><!--[--><!----><main class="svelte-13jjysp"><header class="svelte-13jjysp"><h1 class="title svelte-13jjysp">Pure Harvest</h1> <nav class="tabs svelte-13jjysp"><a class="tab svelte-13jjysp" href="/project2/" aria-label="home">Home</a> <a class="tab svelte-13jjysp" href="/project2/contact" aria-label="contact">Contact</a> <button class="shop-button svelte-13jjysp" aria-label="shop">Shop</button></nav></header> <!----><!----><div class="min-h-screen flex flex-col items-center justify-start bg-white"><div class="w-full max-w-4xl p-8"><h1 class="text-5xl font-bold mb-4 text-center">Contact Us</h1> <hr class="border-t-2 border-green-700 mb-8"> <div class="flex flex-col md:flex-row"><div class="md:w-1/2 mb-8 md:mb-0 flex flex-col items-start"><div class="mb-6"><h2 class="text-2xl font-bold mb-2">Address</h2> <p>East Tapinac, Olongapo, Philippines</p></div> <div class="mb-6"><h2 class="text-2xl font-bold mb-2">Phone</h2> <p>Mobile: 09054718434</p></div> <div class="mb-6"><h2 class="text-2xl font-bold mb-2">Email</h2> <p>sustainablers@gordoncollege.edu.ph</p></div> <div class="mb-6"><h2 class="text-2xl font-bold mb-2">Working Time</h2> <p>Monday-Saturday: 9:00 am  - 5:00 pm</p></div></div> <div class="md:w-1/2 md:pl-8 flex flex-col items-center"><form class="space-y-4 w-full"><div><label class="block text-gray-700">Your name</label> <input type="text" class="w-full p-2 border border-gray-300 rounded" placeholder="Abc" value=""></div> <div><label class="block text-gray-700">Email address</label> <input type="email" class="w-full p-2 border border-gray-300 rounded" placeholder="Abc@def.com" value=""></div> <div><label class="block text-gray-700">Subject</label> <input type="text" class="w-full p-2 border border-gray-300 rounded" placeholder="This is optional" value=""></div> <div><label class="block text-gray-700">Message</label> <textarea class="w-full p-2 border border-gray-300 rounded" placeholder="Hi! I'd like to ask about"></textarea></div> <div><button type="submit" class="w-full p-2 text-white rounded" style="background-color: #426B1F;">Submit</button></div></form></div></div></div></div><!----><!----></main> <footer class="svelte-13jjysp">Deployed by Sustainablers</footer><!----><!--]--> <!--[!--><!--]--><!--]-->
+        <div style="display: contents"><!--[--><!--[--><!----><main class="svelte-13jjysp"><header class="svelte-13jjysp"><h1 class="title svelte-13jjysp">Pure Harvest</h1> <nav class="tabs svelte-13jjysp"><a class="tab svelte-13jjysp" href="/project2/" aria-label="home">Home</a> <a class="tab svelte-13jjysp" href="/project2/contact" aria-label="contact">Contact</a> <button class="shop-button svelte-13jjysp" aria-label="shop">Shop</button></nav></header> <!----><!----><div class="min-h-screen flex flex-col items-center justify-start bg-white"><div class="w-full max-w-4xl p-8"><h1 class="text-5xl font-bold mb-4 text-center">Contact Us</h1> <hr class="border-t-2 border-green-700 mb-8"> <div class="flex flex-col md:flex-row"><div class="md:w-1/2 mb-8 md:mb-0 flex flex-col items-start"><div class="mb-6"><h2 class="text-2xl font-bold mb-2">Address</h2> <p>East Tapinac, Olongapo, Philippines</p></div> <div class="mb-6"><h2 class="text-2xl font-bold mb-2">Phone</h2> <p>Mobile: 09054718434</p></div> <div class="mb-6"><h2 class="text-2xl font-bold mb-2">Email</h2> <p>sustainablers@gmail.com</p></div> <div class="mb-6"><h2 class="text-2xl font-bold mb-2">Working Time</h2> <p>Monday-Saturday: 9:00 am  - 5:00 pm</p></div></div> <div class="md:w-1/2 md:pl-8 flex flex-col items-center"><form class="space-y-4 w-full"><div><label class="block text-gray-700">Your name</label> <input type="text" class="w-full p-2 border border-gray-300 rounded" placeholder="Abc" value=""></div> <div><label class="block text-gray-700">Email address</label> <input type="email" class="w-full p-2 border border-gray-300 rounded" placeholder="Abc@def.com" value=""></div> <div><label class="block text-gray-700">Subject</label> <input type="text" class="w-full p-2 border border-gray-300 rounded" placeholder="This is optional" value=""></div> <div><label class="block text-gray-700">Message</label> <textarea class="w-full p-2 border border-gray-300 rounded" placeholder="Hi! I'd like to ask about"></textarea></div> <div><button type="submit" class="w-full p-2 text-white rounded" style="background-color: #426B1F;">Submit</button></div></form></div></div></div></div><!----><!----></main> <footer class="svelte-13jjysp">Deployed by Sustainablers</footer><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_164ujdh = {
+					__sveltekit_e4lr7j = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/project2"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D9PkAPjn.js"),
-						import("./_app/immutable/entry/app.BmiKDn9V.js")
+						import("./_app/immutable/entry/start.DPUqRY91.js"),
+						import("./_app/immutable/entry/app.6I4Hk6HB.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
