--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         
 		<link href="./_app/immutable/assets/0.QewCql2K.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/app.Du0GMSGn.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/app.DT9XrtQW.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.NmHFT1ZE.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D9PkAPjn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DTBF91yP.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DPUqRY91.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BWbu0of1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.NBAfo0iF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BmiKDn9V.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.6I4Hk6HB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/store.Cx1hATE_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.C05luBB5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.DxcAWsds.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/this.DPOLloYK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/props.BDvw9qd2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.BtIDxGEO.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DVgpbEKX.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CxDzKi8U.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/slot.ZQRvvWia.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/lifecycle.DKOCfVKU.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.D4UaCqsK.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Crik5eWm.js">
     </head>
     <body data-sveltekit-preload-data="hover">
         <div style="display: contents"><!--[--><!--[--><!----><main class="svelte-13jjysp"><header class="svelte-13jjysp"><h1 class="title svelte-13jjysp">Pure Harvest</h1> <nav class="tabs svelte-13jjysp"><a class="tab svelte-13jjysp" href="/project2/" aria-label="home">Home</a> <a class="tab svelte-13jjysp" href="/project2/contact" aria-label="contact">Contact</a> <button class="shop-button svelte-13jjysp" aria-label="shop">Shop</button></nav></header> <!----><!----><main class="svelte-18zi6jb"><h1 class="svelte-18zi6jb">Welcome!</h1> <p class="svelte-18zi6jb">We’re <span class="italic svelte-18zi6jb">farmers</span>, <span class="italic svelte-18zi6jb">purveyors</span>, and <span class="italic svelte-18zi6jb">eaters</span> of organically grown food.</p> <button class="shop-button svelte-18zi6jb">Browse our shop</button></main><!----><!----></main> <footer class="svelte-13jjysp">Deployed by Sustainablers</footer><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_164ujdh = {
+					__sveltekit_e4lr7j = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/project2"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D9PkAPjn.js"),
-						import("./_app/immutable/entry/app.BmiKDn9V.js")
+						import("./_app/immutable/entry/start.DPUqRY91.js"),
+						import("./_app/immutable/entry/app.6I4Hk6HB.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
