--- a/index.html
+++ b/index.html
@@ -7,31 +7,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         
 		<link href="./_app/immutable/assets/0.QewCql2K.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/app.DK9htYKo.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/2.NmHFT1ZE.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DvkgfwHh.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C8YOdQAd.js">
+		<link href="./_app/immutable/assets/app.BUJaXW3G.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/2.B1hDxWdK.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DZajynMv.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Bo__WAFM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.NBAfo0iF.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Dnl2lLIo.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.D5hPXCf2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/store.Cx1hATE_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.C05luBB5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.DxcAWsds.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/this.DPOLloYK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/props.BDvw9qd2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.BtIDxGEO.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DRBOA7FP.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Cy5MKAes.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/slot.ZQRvvWia.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/lifecycle.DKOCfVKU.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.DC2F_zyT.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.5QCbeRt1.js">
     </head>
     <body data-sveltekit-preload-data="hover">
-        <div style="display: contents"><!--[--><!--[--><!----><main class="svelte-13jjysp"><header class="svelte-13jjysp"><h1 class="title svelte-13jjysp">Pure Harvest</h1> <nav class="tabs svelte-13jjysp"><a class="tab svelte-13jjysp" href="/project2/" aria-label="home">Home</a> <a class="tab svelte-13jjysp" href="/project2/contact" aria-label="contact">Contact</a> <button class="shop-button svelte-13jjysp" aria-label="shop">Shop</button></nav></header> <!----><!----><main class="svelte-18zi6jb"><h1 class="svelte-18zi6jb">Welcome!</h1> <p class="svelte-18zi6jb">We’re <span class="italic svelte-18zi6jb">farmers</span>, <span class="italic svelte-18zi6jb">purveyors</span>, and <span class="italic svelte-18zi6jb">eaters</span> of organically grown food.</p> <button class="shop-button svelte-18zi6jb">Browse our shop</button></main><!----><!----></main> <footer class="svelte-13jjysp">Deployed by Sustainablers</footer><!----><!--]--> <!--[!--><!--]--><!--]-->
+        <div style="display: contents"><!--[--><!--[--><!----><main class="svelte-13jjysp"><header class="svelte-13jjysp"><h1 class="title svelte-13jjysp">Pure Harvest</h1> <nav class="tabs svelte-13jjysp"><a class="tab svelte-13jjysp" href="./" aria-label="home">Home</a> <a class="tab svelte-13jjysp" href="./contact" aria-label="contact">Contact</a> <button class="shop-button svelte-13jjysp" aria-label="shop">Shop</button></nav></header> <!----><!----><main class="svelte-1dl03dx"><h1 class="svelte-1dl03dx">Welcome!</h1> <p class="svelte-1dl03dx">We’re <span class="italic svelte-1dl03dx">farmers</span>, <span class="italic svelte-1dl03dx">purveyors</span>, and <span class="italic svelte-1dl03dx">eaters</span> of organically grown food.</p> <button class="shop-button svelte-1dl03dx">Browse our shop</button></main><!----><!----></main> <footer class="svelte-13jjysp">Deployed by Sustainablers</footer><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1uldwr6 = {
-						base: new URL(".", location).pathname.slice(0, -1),
-						assets: "/project2"
+					__sveltekit_1izb20o = {
+						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
@@ -39,8 +38,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DvkgfwHh.js"),
-						import("./_app/immutable/entry/app.Dnl2lLIo.js")
+						import("./_app/immutable/entry/start.DZajynMv.js"),
+						import("./_app/immutable/entry/app.D5hPXCf2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
