--- a/contact.html
+++ b/contact.html
@@ -7,31 +7,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         
 		<link href="./_app/immutable/assets/0.QewCql2K.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/app.LDqaON1g.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/3.BAdQEdNM.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.YlDBNTa4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D8pP2XiW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/runtime._CATi4pl.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BJnyTiJq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/render.CPq2uuMy.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.ClO7yVUi.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/if.CCE8pw1Q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/props.CSG-_v0U.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/store.BBGKNy8m.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/this.CIf2jrZq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.DM9FbplP.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.XEnLOMjo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/slot.F9JgfBqw.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/lifecycle.v7SSgq1F.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.BBKW846i.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/input.Sq96d4Yj.js">
+		<link href="./_app/immutable/assets/app.F8R7SAzG.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/3.ClwlO4tJ.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DbmZXzXn.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BJfZyQh5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DVyqCHcG.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CdQqsOoQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/render.DDVI809z.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CUHCJ9_H.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/if.C_jrojC7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/props.rFPIqCGA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/store.B5nGrhjJ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/this.D07J9k9g.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.CmrcTjfc.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.1NOtAxj2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/slot.DQX0BXSV.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/lifecycle.Bp9CFNu_.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.BEovBtL1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/input.C7vrIndA.js">
     </head>
     <body data-sveltekit-preload-data="hover">
-        <div style="display: contents"><!--[--><!--[--><!----><main class="svelte-13jjysp"><header class="svelte-13jjysp"><h1 class="title svelte-13jjysp">Pure Harvest</h1> <nav class="tabs svelte-13jjysp"><a class="tab svelte-13jjysp" href="./" aria-label="home">Home</a> <a class="tab svelte-13jjysp" href="./contact" aria-label="contact">Contact</a> <button class="shop-button svelte-13jjysp" aria-label="shop">Shop</button></nav></header> <!----><!----><div class="min-h-screen flex flex-col items-center justify-start bg-white"><div class="w-full max-w-4xl p-8"><h1 class="text-5xl font-bold mb-4 text-center">Contact Us</h1> <hr class="border-t-2 border-green-700 mb-8"> <!--[!--><!--]--> <!--[!--><!--]--> <div class="flex flex-col md:flex-row"><div class="md:w-1/2 mb-8 md:mb-0 flex flex-col items-start"><div class="mb-6"><h2 class="text-2xl font-bold mb-2">Address</h2> <p>East Tapinac, Olongapo, Philippines</p></div> <div class="mb-6"><h2 class="text-2xl font-bold mb-2">Phone</h2> <p>Mobile: 09054718434</p></div> <div class="mb-6"><h2 class="text-2xl font-bold mb-2">Email</h2> <p>sustainablers@gmail.com</p></div> <div class="mb-6"><h2 class="text-2xl font-bold mb-2">Working Time</h2> <p>Monday-Saturday: 9:00 am  - 5:00 pm</p></div></div> <div class="md:w-1/2 md:pl-8 flex flex-col items-center"><form class="space-y-4 w-full"><div><label class="block text-gray-700">Your name</label> <input type="text" class="w-full p-2 border border-gray-300 rounded" placeholder="Abc" value=""></div> <div><label class="block text-gray-700">Email address</label> <input type="email" class="w-full p-2 border border-gray-300 rounded" placeholder="Abc@def.com" value=""></div> <div><label class="block text-gray-700">Subject</label> <input type="text" class="w-full p-2 border border-gray-300 rounded" placeholder="This is optional" value=""></div> <div><label class="block text-gray-700">Message</label> <textarea class="w-full p-2 border border-gray-300 rounded" placeholder="Hi! I'd like to ask about"></textarea></div> <div><button type="submit" class="w-full p-2 text-white rounded" style="background-color: #426B1F;">Submit</button></div></form></div></div></div></div><!----><!----></main> <footer class="svelte-13jjysp">Deployed by Sustainablers</footer><!----><!--]--> <!--[!--><!--]--><!--]-->
+        <div style="display: contents"><!--[--><!--[--><!----><main class="svelte-13jjysp"><header class="svelte-13jjysp"><h1 class="title svelte-13jjysp">Pure Harvest</h1> <nav class="tabs svelte-13jjysp"><a class="tab svelte-13jjysp" href="./" aria-label="home">Home</a> <a class="tab svelte-13jjysp" href="./contact" aria-label="contact">Contact</a> <button class="shop-button svelte-13jjysp" aria-label="shop">Shop</button></nav></header> <!----><!----><div class="min-h-screen flex flex-col items-center justify-start bg-white"><div class="w-full max-w-4xl p-8"><h1 class="text-5xl font-bold mb-4 text-center">Contact Us</h1> <hr class="border-t-2 border-green-700 mb-8"> <!--[!--><!--]--> <div class="flex flex-col md:flex-row"><div class="md:w-1/2 mb-8 md:mb-0 flex flex-col items-start"><div class="mb-6"><h2 class="text-2xl font-bold mb-2">Address</h2> <p>East Tapinac, Olongapo, Philippines</p></div> <div class="mb-6"><h2 class="text-2xl font-bold mb-2">Phone</h2> <p>Mobile: 09054718434</p></div> <div class="mb-6"><h2 class="text-2xl font-bold mb-2">Email</h2> <p>sustainablers@gmail.com</p></div> <div class="mb-6"><h2 class="text-2xl font-bold mb-2">Working Time</h2> <p>Monday-Saturday: 9:00 am - 5:00 pm</p></div></div> <div class="md:w-1/2 md:pl-8 flex flex-col items-center"><form class="space-y-4 w-full"><div><label class="block text-gray-700">Your name</label> <input type="text" class="w-full p-2 border rounded valid-field svelte-13byxcx" placeholder="Abc" value=""> <!--[!--><!--]--></div> <div><label class="block text-gray-700">Email address</label> <input type="email" class="w-full p-2 border rounded valid-field svelte-13byxcx" placeholder="Abc@def.com" value=""> <!--[!--><!--]--></div> <div><label class="block text-gray-700">Subject</label> <input type="text" class="w-full p-2 border border-gray-300 rounded" placeholder="This is optional" value=""></div> <div><label class="block text-gray-700">Message</label> <textarea class="w-full p-2 border rounded valid-field svelte-13byxcx" placeholder="Hi! I'd like to ask about"></textarea> <!--[!--><!--]--></div> <div><button type="submit" class="w-full p-2 text-white rounded" style="background-color: #426B1F;">Submit</button></div></form></div></div></div></div><!----><!----></main> <footer class="svelte-13jjysp">Deployed by Sustainablers</footer><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_w78u2a = {
+					__sveltekit_1tstra5 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -40,8 +40,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.YlDBNTa4.js"),
-						import("./_app/immutable/entry/app.BJnyTiJq.js")
+						import("./_app/immutable/entry/start.DbmZXzXn.js"),
+						import("./_app/immutable/entry/app.CdQqsOoQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
