--- a/index.html
+++ b/index.html
@@ -7,30 +7,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         
 		<link href="./_app/immutable/assets/0.QewCql2K.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/app.LDqaON1g.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/app.F8R7SAzG.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.B1hDxWdK.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.YlDBNTa4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D8pP2XiW.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/runtime._CATi4pl.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BJnyTiJq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/render.CPq2uuMy.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.ClO7yVUi.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/if.CCE8pw1Q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/props.CSG-_v0U.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/store.BBGKNy8m.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/this.CIf2jrZq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.DM9FbplP.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.XEnLOMjo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/slot.F9JgfBqw.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/lifecycle.v7SSgq1F.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.BYPGouba.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DbmZXzXn.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BJfZyQh5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DVyqCHcG.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CdQqsOoQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/render.DDVI809z.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CUHCJ9_H.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/if.C_jrojC7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/props.rFPIqCGA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/store.B5nGrhjJ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/this.D07J9k9g.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.CmrcTjfc.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.1NOtAxj2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/slot.DQX0BXSV.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/lifecycle.Bp9CFNu_.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.DidsvE2i.js">
     </head>
     <body data-sveltekit-preload-data="hover">
         <div style="display: contents"><!--[--><!--[--><!----><main class="svelte-13jjysp"><header class="svelte-13jjysp"><h1 class="title svelte-13jjysp">Pure Harvest</h1> <nav class="tabs svelte-13jjysp"><a class="tab svelte-13jjysp" href="./" aria-label="home">Home</a> <a class="tab svelte-13jjysp" href="./contact" aria-label="contact">Contact</a> <button class="shop-button svelte-13jjysp" aria-label="shop">Shop</button></nav></header> <!----><!----><main class="svelte-1dl03dx"><h1 class="svelte-1dl03dx">Welcome!</h1> <p class="svelte-1dl03dx">We’re <span class="italic svelte-1dl03dx">farmers</span>, <span class="italic svelte-1dl03dx">purveyors</span>, and <span class="italic svelte-1dl03dx">eaters</span> of organically grown food.</p> <button class="shop-button svelte-1dl03dx">Browse our shop</button></main><!----><!----></main> <footer class="svelte-13jjysp">Deployed by Sustainablers</footer><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_w78u2a = {
+					__sveltekit_1tstra5 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.YlDBNTa4.js"),
-						import("./_app/immutable/entry/app.BJnyTiJq.js")
+						import("./_app/immutable/entry/start.DbmZXzXn.js"),
+						import("./_app/immutable/entry/app.CdQqsOoQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
